--- a/src/shared/prerendered-app/colors.css
+++ b/src/shared/prerendered-app/colors.css
@@ -9,6 +9,7 @@ html {
   --deep-blue: #09f;
   --light-blue: #76c8ff;
   --light-gray: #eaeaea;
+  --medium-light-gray: #d1d1d1;
   --dark-gray: #333;
   --dim-text: #343a3e;
   --dark-text: #142630;
