Range input underline theme

--- a/src/client/lazy-app/Compress/Options/Range/style.css
+++ b/src/client/lazy-app/Compress/Options/Range/style.css
@@ -33,6 +33,7 @@
   box-sizing: border-box;
   text-decoration: underline;
   text-decoration-style: dotted;
+  text-decoration-color: var(--main-theme-color);
   text-underline-position: under;
   width: 48px;
   position: relative;
