--- a/src/shared/prerendered-app/colors.css
+++ b/src/shared/prerendered-app/colors.css
@@ -8,6 +8,7 @@ html {
   --dim-blue: #0a7bcc;
   --deep-blue: #09f;
   --light-blue: #76c8ff;
+  --less-light-gray: #bcbcbc;
   --light-gray: #eaeaea;
   --medium-light-gray: #d1d1d1;
   --dark-gray: #333;
