Add yet another gray

--- a/src/shared/prerendered-app/colors.css
+++ b/src/shared/prerendered-app/colors.css
@@ -11,6 +11,7 @@ html {
   --less-light-gray: #bcbcbc;
   --medium-light-gray: #d1d1d1;
   --light-gray: #eaeaea;
+  --med-gray: #555;
   --dark-gray: #333;
   --dim-text: #343a3e;
   --dark-text: #142630;
