--- a/src/shared/prerendered-app/colors.css
+++ b/src/shared/prerendered-app/colors.css
@@ -2,18 +2,19 @@ html {
   --pink: #ff3385;
   --hot-pink: #ff0066;
   --white: #fff;
+  --black: #000;
+  --off-black: #1d1d1d;
+  --blue: #5fb4e4;
   --dim-blue: #0a7bcc;
   --deep-blue: #09f;
   --light-blue: #76c8ff;
+  --less-light-gray: #bcbcbc;
+  --medium-light-gray: #d1d1d1;
   --light-gray: #eaeaea;
-  --dark-text: #343a3e;
+  --dark-gray: #333;
+  --dim-text: #343a3e;
+  --dark-text: #142630;
 
   /* Old stuff: */
-  --gray-dark: rgba(0, 0, 0, 0.8);
-
-  --button-fg-color: 95, 180, 228;
   --button-fg: rgb(95, 180, 228);
-
-  --negative: rgb(207, 113, 127);
-  --positive: rgb(149, 212, 159);
 }
