--- a/src/shared/prerendered-app/Intro/style.css
+++ b/src/shared/prerendered-app/Intro/style.css
@@ -133,11 +133,17 @@
 
 .footer-items {
   display: grid;
-  justify-content: end;
-  grid-auto-columns: max-content;
-  grid-auto-flow: column;
-  align-items: center;
-  gap: 4rem;
+
+  grid-auto-rows: max-content;
+  justify-items: center;
+  gap: 2rem;
+
+  @media (min-width: 480px) {
+    justify-content: end;
+    grid-auto-flow: column;
+    align-items: center;
+    gap: 4rem;
+  }
 }
 
 .footer-link {
