Fix mobile fly-out

--- a/src/client/lazy-app/Compress/Flyout/style.css
+++ b/src/client/lazy-app/Compress/Flyout/style.css
@@ -32,6 +32,7 @@
   &[data-direction*='left'] {
     right: 0;
     left: auto;
+    align-items: flex-end;
     &[anchor*='right'] {
       right: 100%;
     }
