Initial Options Flyout

--- a/src/client/lazy-app/Compress/Flyout/style.css
+++ b/src/client/lazy-app/Compress/Flyout/style.css
@@ -1,6 +1,8 @@
 .wrap {
-  display: inline;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-items: center;
 }
 
 .wrap > aside:last-of-type {
